# kornia

./: .bandit  .codecov.yml  .deepsource.toml  .drone.yml  .flake8  .gitattributes  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .travis.yml.old  AI_POLICY.md  BACKERS.md  CHANGELOG.md  CITATION.md  CI_INVESTIGATION.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  COPYRIGHT  Code test.ipynb  HANDOFF.md  LICENSE  MANIFEST.in  Makefile  PALIGEMMA_FIXES.md  README.md  README.rst  README_zh-CN.md  RFC.md  RFC_2_0.md  ROADMAP.md  Regression loss test.ipynb  TESTING.md  ai_dynamic.py  azure-pipelines.yml  best_practices.md  codecov.yml  (+35 more)
.circleci/: config.yml  config.yml.old  config.yml.tmp
.devcontainer/: Dockerfile  devcontainer.json
.github/: AI_POLICY.md  CODEOWNERS  FUNDING.yml  README.md  actions_info.md  copilot-instructions.md  dependabot.yml  download-models-weights.py  emoji.yml  pull-request-template.md  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  documentation.md  feature-request.md  feature-request.yml  questions-help-support.md
.github/agents/: python-code-review.md
.github/configurations/: changelog-ci-config.json
.github/workflows/: add_emoji.yml  auto-merge-dependabot.yml  changelog.yml  codeflash.yml  codeql-analysis.yml  coverage.yml  docs.yml  format.yml  issue-triage.yml  lint.yml  mypy.yml  pr-validation.yml  pr_benchmarks.yml  pr_test_cpu.yml  pr_test_typing.yml  pypi-release.yml  python_package.yml  scheduled_test_cpu.yml  scheduled_test_cpu_half.yml  scheduled_test_nightly.yml  scheduled_test_pypi_package.yml  scheduled_test_typing.yml  self-tests.yml  stale.yml  test_cpu.yml  test_tutorials.yml  test_typing.yml  tests.yml  tests_cpu.yml  tests_cpu_versions.yml  tests_cuda.yml  tests_cuda_versions.yml  tests_lts.yml  tests_nightly.yml  tutorials.yml  typecheck.yml  unittests.yml
Mask Detector/: DeepCode.py  Detect.py  Read Me.txt
_examples/depth_regression/: download_data.sh  main.py  readme.rst
_examples/depth_warper/: Depth_warper.ipynb  install_dependencies.sh
_examples/homography_regression/: .gitignore  download_data.sh  main.py
benchmarks/augmentation/: 2d_geometric_test.py  2d_intensity_test.py  README.md  all_libraries.py  conftest.py  cross_library.py  per_op.py  pipeline.py  vs_torchvision.py
benchmarks/color/: gray_test.py  sepia_test.py  xyz_test.py  ycbcr_test.py  yuv_test.py
benchmarks/comparative/: leaderboard.md  leaderboard_per_op.md  leaderboard_v2.md  leaderboard_v3.md  leaderboard_v4.md  leaderboard_v5.md  leaderboard_v6.md  results.json  results_per_op.json  results_v2.json  results_v3.json  results_v4.json  results_v5.json  results_v6.json  run.py  run_per_op.py  run_v2.py  run_v3.py  run_v4.py  run_v5.py  run_v6.py
benchmarks/cuda_graph/: README.md  leaderboard.md  leaderboard.py  per_transform.py  results.jsonl  test_capture_contract.py
benchmarks/feature/: raw_quality.csv  raw_speed.csv  results_graf.md  scale_space_detector.py
benchmarks/geometry/: depth_to_normals.py  linalg_epipolar_distort.py  pointcloud.py  project_distort.py
datasets/: .gitattributes
docker/: Dockerfile  Dockerfile.benchmark  Dockerfile.test  Dockerfile.travis  build.sh
docs/: .gitignore  Makefile  generate_example_images.py  generate_examples.py  index.md  migration_kornia_2.md  requirements.txt
docs/source/: about.rst  (+79 more)
examples/: README.rst  color_adjust.py  color_conversions.py  data_augmentation.py  defmo_example.py  dilation.py  filter_blurring.py  filter_edges.py  gaussian_blur.py  get_perspective_transform.ipynb  hello_world.py  total_variation_denoising.py  warp_affine.ipynb  warp_affine.py  warp_perspective.ipynb  warp_perspective.py
kornia/: __init__.py  __tmp__.py  _version.py  cli.py  config.py  constants.py  nn.py  version.py
packaging/: README.rst  build_wheel.sh
requirements/: dev.txt  requirements-benchmarks.txt  requirements-dev.txt  requirements-docs.txt  requirements-x.txt  requirements.txt  x.txt
scripts/: benchmark_ssd_vs_sift.py  build_wheel.sh  fix_all_docstring_warnings.py  fix_code_indentation_errors.py  fix_docstring_indentation.py  fix_docstring_over_indentation.py  fix_docstring_placement.py  fix_docstring_warnings.py  fix_missing_types.py  fix_nnmodule_docs.py  fix_return_annotations.py  fix_type_annotations.py  fix_type_warnings.py  travis_before_install.sh  upload_weights_to_hf.py  validate_vlm.py  verify.py  verify_nnmodule_docs.py
test/: benchmark.py  common.py  keynet_test.py  smoke_test.py  temp.onnx  test_affine.py  test_augmentation.py  test_blur.py  test_color.py  test_contrib.py  test_conversions.py  test_convertions.py  test_crop.py  test_depth_warper.py  test_feature.py  test_filter.py  test_functional.py  test_homography_warper.py  test_image.py  test_imgwarp.py  test_jit_tracing.py  test_losses.py  test_median.py  test_metrics.py  test_pinhole.py  test_pyramid.py  test_sobel.py  test_transformations.py  test_transforms.py  test_utils.py  test_x.py  utilities.py  utils.py
testing/: __init__.py  base.py  base_test.py  casts.py  dtypes.py  error.py  laf.py  nerf.py  overwrite.py  parametrized_tester.py
tests/: __init__.py  api_surface.json  benchmark.py  conftest.py  smoke_test.py  smoke_tests.py  test_bbox_params.py  test_channels_last.py  test_copy_paste.py  test_export_onnx.py  test_export_torch.py  test_generate_examples.py  test_import.py  test_issue_3300.py  test_large_scale_jittering.py  test_metrics.py  test_namespace_shim.py  test_normalize_with_grad.py  test_pipeline_compile.py  test_public_api.py  test_pydantic_params.py  test_rfdetr_signature_freeze.py  test_skill_install.py
torchgeometry/: __init__.py  conversions.py  depth_warper.py  functional.py  homography_warper.py  imgwarp.py  pinhole.py  transformations.py  utils.py  version.py
tutorials/: README.rst  color_adjust.py  color_conversions.py  data_augmentation.py  filter_blurring.py  filter_edges.py  gaussian_blur.py  hello_world.py  total_variation_denoising.py  warp_affine.py  warp_perspective.py
(+2130 files in other folders)
