[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
name = "kornia"
description = "Open Source Differentiable Computer Vision Library for PyTorch"
keywords = ["computer vision", "deep learning", "pytorch"]
license = { text = "Apache-2.0" }
authors = [
  { name = "Edgar Riba", email = "edgar@kornia.org" },
]
requires-python = ">=3.9"
dependencies = [
    "kornia_rs>=0.1.9",
    "packaging",
    "torch>=2.0.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: GPU",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries",
]
dynamic = ["readme", "version"]

[project.urls]
"Bug Tracker" = "https://github.com/kornia/kornia/issues"
Documentation = "https://kornia.readthedocs.io/en/latest"
Download = "https://github.com/kornia/kornia"
Issues = "https://github.com/kornia/kornia/issues"
Homepage = "https://kornia.github.io/"
"Source Code" = "https://github.com/kornia/kornia"

[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "kornia.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
exclude = ["docs*", "test*", "examples*"]
namespaces = false

[tool.setuptools.package-data]
kornia = ["py.typed"]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "AIR", "ASYNC", "B", "BLE", "C4", "C90", "DTZ", "E", "F", "FLY", "I", "ICN",
  "INT", "NPY", "PL", "PYI", "RSE", "RUF", "S", "SLOT", "T10", "TID", "UP", "W", "YTT",
  "D"
]
ignore = [
  "PLR0915", "PLC0415", "PLW2901", "PLW1641",
  "UP007", "UP006", "UP035", "UP045", "RUF005",
  "D100", "D101", "D102", "D104", "D105", "D107"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
forced-separate = ["testing", "tests"]
known-first-party = ["kornia"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "float", "int", "str"]
max-args = 30
max-branches = 21
max-returns = 13
max-statements = 64

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]
"benchmarks/*" = ["BLE", "RUF005", "RUF012", "S101", "S311", "D"]
"docs/*" = ["PLR0912", "PLR0915", "S101", "D"]
"docs/generate_examples.py" = ["C901"]
"kornia/__init__.py" = ["I001"]
"kornia/feature/dedode/*" = ["C408", "F401", "F841", "FLY002", "PLR1714"]
"testing/*" = ["S101", "D"]
"tests/*" = ["BLE", "RUF005", "RUF012", "S101", "S311", "B017", "D"]

[tool.pytest.ini_options]
addopts = "--color=yes"
markers = [
  "grad: mark a test as gradcheck test",
  "jit: mark a test as torchscript test",
  "nn: mark a test as module test",
  "slow: mark test as slow to run",
]

[tool.coverage.run]
branch = true
source = ['kornia/']
omit = ['*/__main__.py', '*/setup.py']

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 84
exclude_lines = [
  '\# pragma: no cover\b',
  '^\s*raise AssertionError\b',
  '^\s*raise NotImplementedError\b',
  '^\s*return NotImplemented\b',
  '^\s*raise$',
  '^\s*if (False|TYPE_CHECKING):',
  ': \.\.\.(\s*#.*)?$',
  '^ +\.\.\.$',
  "def __repr__",
  "if __name__ == .__main__.:",
  "if 0:",
  "if self.debug:",
]
partial_branches = ['\# pragma: no cover\b']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
files = ["kornia/"]
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "kornia.feature.dedode.transformer.*"
ignore_errors = true

[tool.pydocstyle]
match = '.*\.py'

[tool.codeflash]
module-root = "kornia"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["disabled"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "accelerate",
    "coverage",
    "diffusers",
    "ivy>=1.0.0.0",
    "mypy",
    "numpy<3",
    "onnx",
    "onnxruntime",
    "pillow",
    "pre-commit>=2",
    "pytest==8.3.5",
    "pytest-cov",
    "pytest-timeout",
    "requests",
    "setuptools>=61.2",
    "transformers<4.57",
    "huggingface-hub<1.0",
    "types-requests",
]
x = [
    "accelerate",
    "onnxruntime-gpu>=1.16; sys_platform != 'darwin'",
]
docs = [
    "furo",
    "ivy>=1.0.0.0",
    "kornia_moons",
    "matplotlib",
    "onnx",
    "onnxruntime",
    "opencv-python",
    "PyYAML>=5.1",
    "sphinx",
    "sphinx-autodoc-defaultargs",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton>=0.3",
    "sphinx-design",
    "sphinx-notfound-page",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-gtagjs",
    "sphinxcontrib-youtube",
]
