[aliases]
test=pytest

[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
addopts =
    --strict
    --color=yes

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude =
    docs
    versioneer.py
    kornia/_version.py
per-file-ignores =
    __init__.py: F401, F403
verbose = 2
ignore =
    W503  # Ignore "Line break occurred before a binary operator"
    E203  # Ignore "whitespace before ':'"

[mypy]
files = kornia, test
pretty = True
show_error_codes = True
ignore_missing_imports = True

[pydocstyle]
match = .*\.py
ignore = D105,D107,D203,D204,D213,D406,D407

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise
    if 0:
    if __name__ == .__main__.:

[isort]
line_length = 120
known_first_party =
    examples
    kornia
    tests
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True
skip=kornia/__init__.py
