[metadata]
name = kornia
version = 0.6.8
description = Open Source Differentiable Computer Vision Library for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.kornia.org
author = Edgar Riba
author_email = edgar@kornia.org
license = Apache-2.0
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: GPU
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries
download_url = https://github.com/kornia/kornia
keywords = computer vision, deep learning, pytorch
project_urls =
    Bug Tracker = https://github.com/kornia/kornia/issues
    Documentation = https://kornia.readthedocs.io/en/latest
    Source Code =  https://github.com/kornia/kornia

[options]
packages = find:
install_requires =
    packaging
    torch>=1.8.1
python_requires = >=3.7
setup_requires =
    pytest-runner
tests_require =
    pytest
zip_safe = True

[options.packages.find]
exclude =
    docs*
    test
    test.*
    examples*

[options.extras_require]
dev =
    flake8==5.0.4
    isort
    kornia-rs==0.0.5
    numpy
    opencv-python
    pre-commit>=2.0
    pydocstyle
    pytest==7.2.0
    pytest-cov==4.0.0
    pytest-mypy==0.10.0
    scipy
docs =
    PyYAML>=5.1,<6.1.0
    furo
    matplotlib
    opencv-python
    sphinx>=4.0
    sphinx-autodoc-defaultargs
    sphinx-autodoc-typehints>=1.0
    sphinx-copybutton>=0.3
    sphinx-design
    sphinx-rtd-theme>0.5
    sphinxcontrib-bibtex
    sphinxcontrib-gtagjs
    sphinxcontrib-youtube
    torch
    torchvision
x =
    accelerate==0.13.2

[bdist_wheel]
universal = True

[aliases]
test = pytest

[tool:pytest]
norecursedirs =
    .git
    .github
    dist
    build
addopts =
    --strict
    --color=yes
markers =
    jit: mark a test as torchscript test
    grad: mark a test as gradcheck test
    nn: mark a test as module test

[flake8]
max-line-length = 120
exclude =
    docs
per-file-ignores =
    __init__.py: F401, F403
verbose = 2
ignore =
    W503  # Ignore "Line break occurred before a binary operator"
    E203  # Ignore "whitespace before ':'"

[mypy]
files = kornia/
pretty = True
show_error_codes = True
ignore_missing_imports = True
no_implicit_optional = True

[pydocstyle]
match = .*\.py
ignore =
    D105
    D107
    D203
    D204
    D213
    D406
    D407

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise
    if 0:
    if __name__ == .__main__.:
